// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Carousel/demo/animation-card.md correctly 1`] = `
<div
  autoplay=""
  class="arco-carousel arco-carousel-indicator-position-outer"
  style="width:100%;height:240px"
>
  <div
    class="arco-carousel-card arco-carousel-horizontal"
  >
    <div
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-80px)"
      />
    </div>
    <div
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-80px)"
      />
    </div>
    <div
      class=""
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-80px)"
      />
    </div>
    <div
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:60%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/04b379e20b6c42f78d17cac99fcf4fd7~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-80px)"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-outer"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-outer"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/animation-fade.md correctly 1`] = `
<div
  autoplay=""
  class="arco-carousel arco-carousel-indicator-position-bottom"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-fade arco-carousel-horizontal"
  >
    <div
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms;width:100%"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/auto.md correctly 1`] = `
<div
  autoplay=""
  class="arco-carousel arco-carousel-indicator-position-bottom"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-slide arco-carousel-horizontal"
  >
    <div
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
  <div
    class="arco-carousel-arrow arco-carousel-arrow-hover"
  >
    <div
      class="arco-carousel-arrow-left"
    >
      <svg
        class="arco-icon arco-icon-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </div>
    <div
      class="arco-carousel-arrow-right"
    >
      <svg
        class="arco-icon arco-icon-right"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/basic.md correctly 1`] = `
<div
  class="arco-carousel arco-carousel-indicator-position-bottom"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-slide arco-carousel-horizontal"
  >
    <div
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
  <div
    class="arco-carousel-arrow"
  >
    <div
      class="arco-carousel-arrow-left"
    >
      <svg
        class="arco-icon arco-icon-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </div>
    <div
      class="arco-carousel-arrow-right"
    >
      <svg
        class="arco-icon arco-icon-right"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/indicator.md correctly 1`] = `
Array [
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    style="margin-bottom:10px"
  >
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="type"
        type="radio"
        value="dot"
      />
      <span
        class="arco-radio-button-inner"
      >
        dot
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="type"
        type="radio"
        value="line"
      />
      <span
        class="arco-radio-button-inner"
      >
        line
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="type"
        type="radio"
        value="slider"
      />
      <span
        class="arco-radio-button-inner"
      >
        slider
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    style="margin-bottom:20px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="left"
      />
      <span
        class="arco-radio-button-inner"
      >
        left
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="right"
      />
      <span
        class="arco-radio-button-inner"
      >
        right
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="top"
      />
      <span
        class="arco-radio-button-inner"
      >
        top
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="position"
        type="radio"
        value="bottom"
      />
      <span
        class="arco-radio-button-inner"
      >
        bottom
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="position"
        type="radio"
        value="outer"
      />
      <span
        class="arco-radio-button-inner"
      >
        outer
      </span>
    </label>
  </div>,
  <div
    class="arco-carousel arco-carousel-indicator-position-bottom"
    style="width:600px;height:240px"
  >
    <div
      class="arco-carousel-slide arco-carousel-horizontal"
    >
      <div
        class="arco-carousel-item-current"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
          style="width:100%;transform:translateY(-60px)"
        />
      </div>
      <div
        class="arco-carousel-item-next"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
          style="width:100%;transform:translateY(-60px)"
        />
      </div>
      <div
        class="arco-carousel-item-prev"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
          style="width:100%;transform:translateY(-60px)"
        />
      </div>
    </div>
    <div
      class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
    >
      <div
        class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
      >
        <span
          class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
          data-index="0"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="1"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="2"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="3"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`renders Carousel/demo/selfComponent.md correctly 1`] = `
<div>
  <div
    class="arco-carousel arco-carousel-indicator-position-bottom"
    style="width:600px;height:240px"
  >
    <div
      class="arco-carousel-slide arco-carousel-horizontal"
    >
      <div
        class="arco-carousel-item-current"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
          style="width:100%;transform:translateY(-60px)"
        />
      </div>
      <div
        class="arco-carousel-item-next"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
          style="width:100%;transform:translateY(-60px)"
        />
      </div>
      <div
        class="arco-carousel-item-prev"
        style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
      >
        <img
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
          style="width:100%;transform:translateY(-60px)"
        />
      </div>
    </div>
    <div
      class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-bottom"
    >
      <div
        class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-bottom"
      >
        <span
          class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
          data-index="0"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="1"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="2"
        />
        <span
          class="arco-carousel-indicator-item"
          data-index="3"
        />
      </div>
    </div>
    <div
      class="arco-carousel-arrow"
    >
      <div
        class="arco-carousel-arrow-left"
      >
        <svg
          class="arco-icon arco-icon-left"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M32 8.4 16.444 23.956 32 39.513"
          />
        </svg>
      </div>
      <div
        class="arco-carousel-arrow-right"
      >
        <svg
          class="arco-icon arco-icon-right"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Carousel/demo/vertical.md correctly 1`] = `
<div
  class="arco-carousel arco-carousel-indicator-position-right"
  style="width:600px;height:240px"
>
  <div
    class="arco-carousel-slide arco-carousel-vertical"
  >
    <div
      class="arco-carousel-item-current"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/dae45672685c4be6a297acc7848eab56~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-next"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a5eb077f42834139ad7ac17563056664~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
    <div
      class="arco-carousel-item-prev"
      style="transition-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);transition-duration:500ms;animation-timing-function:cubic-bezier(0.34, 0.69, 0.1, 1);animation-duration:500ms"
    >
      <img
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/5c030fe27c0e467a9a7d62c36ae4805b~tplv-uwbnlip3yd-image.image"
        style="width:100%;transform:translateY(-60px)"
      />
    </div>
  </div>
  <div
    class="arco-carousel-indicator-wrapper arco-carousel-indicator-wrapper-right"
  >
    <div
      class="arco-carousel-indicator arco-carousel-indicator-dot arco-carousel-indicator-right"
    >
      <span
        class="arco-carousel-indicator-item arco-carousel-indicator-item-active"
        data-index="0"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="1"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="2"
      />
      <span
        class="arco-carousel-indicator-item"
        data-index="3"
      />
    </div>
  </div>
</div>
`;
